edit the nginx config in the server to save one redirect step

--- a/config/nginx_production.conf
+++ b/config/nginx_production.conf
@@ -61,7 +61,7 @@ server {
     }
 
     if ($host = 'www.robin8.net' ) {
-        rewrite ^/(.*)$ http://robin8.net/$1 permanent;
+        rewrite ^/(.*)$ https://robin8.net/$1 permanent;
     }
 
     location = / {
