added a redirect for robin8.com to robin8.net without relying on our DNS registrar

--- a/config/nginx_production.conf
+++ b/config/nginx_production.conf
@@ -194,30 +194,11 @@ server {
     return 301 http://www.robin8put.org;
 }
 
-# Disabled on 20th Dec 2017
-#server {
-#     listen 80;
-#     server_name 139.196.14.144 ;
-#     client_max_body_size 20m;
-#     root /home/deployer/apps/robin8/shared/public;
-#
-#     location / {
-#         proxy_buffers 8 1512k;
-#         proxy_buffer_size 10024k;
-#         proxy_busy_buffers_size 10024k;
-#         proxy_read_timeout 3000;
-#         proxy_set_header  HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
-#         proxy_set_header  X-Real-IP        $remote_addr;
-#         proxy_set_header  X-Forwarded-For  $proxy_add_x_forwarded_for;
-#         proxy_set_header  Host             $http_host;
-#         proxy_connect_timeout 600;
-#         client_max_body_size    30m;
-#         #proxy_pass http://robin8_production;
-#         proxy_pass http://127.0.0.1:8181;
-#         add_header X-Frame-Options ALLOW-FROM;
-#
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-#     }
-#}
+server {
+    listen 80;
+    listen 443;
+    server_name robin8.com www.robin8.com;
+    ssl_certificate         /root/robin8.com.cert.pem;
+    ssl_certificate_key     /root/robin8.com.key.pem;
+    return 301 https://robin8.net;
+}
